# Version 0.29

## New Features

- begin work on login -- kaneryu on 2025-03-09

## Bugfixes

- make progressbar a bit larger -- kaneryu on 2025-03-12
- add some things to cleanup -- kaneryu on 2025-03-14



# Version 0.28

## New Features

- implement part of reworked networking -- kaneryu on 2025-03-08



# Version 0.27

## New Features

- Add functioning marquee to text elements -- kaneryu on 2025-03-04



# Version 0.26

## New Features

- added base for settings -- kaneryu on 2025-03-01

## Bugfixes

- remove KImage (closes #4) -- kaneryu on 2025-03-01
- use logging in both datastore and cache, and make cache more resilient to being moved. -- kaneryu on 2025-03-02
- Fix bug where going to the next song would hang the application; also improve job handling in background workers & split queue class up for easier managment -- kaneryu on 2025-03-03



# Version 0.25

## New Features

- add rich presence support -- kaneryu on 2025-02-28



# Version 0.24

## New Features

- improve queueview visuals -- kaneryu on 2025-02-21

## Bugfixes

- add mouseblocker on queue view so clicks and scrolls don't pass through it -- kaneryu on 2025-02-21
- make search use the default song thing -- kaneryu on 2025-02-22
- bug where search used the wrong ID in searchpress -- kaneryu on 2025-02-23
- remove kimage from interactions -- kaneryu on 2025-02-25



# Version 0.23

## New Features

- Added busyindicators to image to show when the image is loading -- kaneryu on 2025-02-21

## Bugfixes

- fixed a few startup bugs, made queueview use the Song object -- kaneryu on 2025-02-21
- made duration available from song object -- kaneryu on 2025-02-21



# Version 0.22

## New Features

- add song image provider, to start moving away from KImage (#4) -- kaneryu on 2025-02-20



# Version 0.21

## New Features

- assosiate song kimages with songs #3 -- kaneryu on 2025-02-18



# Version 0.20

## New Features
